some correction on mobile view

--- a/src/index.css
+++ b/src/index.css
@@ -91,4 +91,12 @@
       box-shadow: 0 0 30px rgba(0, 217, 255, 0.2);
     }
   }
+  .scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
 }
